--- a/src/app/projetos/projetos.css
+++ b/src/app/projetos/projetos.css
@@ -10,7 +10,6 @@
     margin: 0 80px;
     flex-wrap: wrap;
     column-gap: 20px;
-    align-items: center;
     justify-content: center;
 }
 
